# hermes-operator

./: .yml  FORK_NOTES.md  Makefile  README.md  go.mod  go.sum
.github/workflows/: agent-image.yaml  build.yaml  ci.yaml  e2e.yaml  helm-rbac.yaml  operator-image.yaml  release.yaml  scorecard.yaml
api/v1/: hermesinstance_types.go  hermesinstance_types_test.go  zz_generated.deepcopy.go
charts/hermes-operator/: values.yaml
cmd/: main.go
config/rbac/: role.yaml
docs/: api-reference.md  conditions.md  conventions.md
hack/: reconcile-guard.sh
images/hermes-agent/: Dockerfile  entrypoint.sh  pyproject.toml
internal/controller/: hermesclusterdefaults_controller.go  hermesclusterdefaults_controller_test.go  hermesinstance_controller.go  hermesinstance_controller_test.go  hermesselfconfig_controller.go  hermesselfconfig_controller_test.go  job_utils.go  selfconfig_apply.go  selfconfig_apply_test.go  selfconfig_metrics_test.go  selfconfig_policy_test.go  suite_test.go
internal/resources/: common_test.go  configmap.go  configmap_test.go  gateways.go  gateways_test.go  honcho.go  honcho_test.go  hpa.go  hpa_test.go  ingress.go  ingress_test.go  networkpolicy.go  networkpolicy_test.go  pdb.go  pdb_test.go  prometheusrule.go  prometheusrule_test.go  semaphore.go  service.go  service_test.go  servicemonitor.go  servicemonitor_test.go  statefulset.go  statefulset_test.go  workspace_configmap.go  workspace_configmap_test.go
internal/webhook/: webhook_hermesinstance_validate.go  webhook_hermesinstance_validate_test.go  webhook_hermesselfconfig.go  (+1 more)
(+9 files in other folders)
